[package]
name = "image_manager"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = {version = "3.1.6", features = ["derive"]}
config = "0.12.0"
kamadak-exif = "0.5.4"
once_cell = "1.10.0"
regex = "1.5.5"
sqlx = { version = "0.5.11", features = [ "runtime-async-std-rustls", "sqlite", "chrono", "json" ] }
anyhow = "1.0.56"
tokio = {version="1.17.0",  features = ["full"]}
serde = { version = "^1.0.136", features = ["derive"] }
serde_json = "1.0.79"
mp4 = "0.10.0"
